2008-12-07  Brian Pepple  <bpepple@fedoraproject.org>

	* libtwitux/twitux-keyring.h:
	* libtwitux/twitux-xml.[ch]:
	* src/twitux-about.[ch]:
	* src/twitux-add-dialog.[ch]:
	* src/tiwtux-account-dialog.[ch]:
	* src/twitux-app.h:
	* src/twitux-dbus.h:
	* src/twitux-geometry.h:
	* src/twitux-hint.[ch]:
	* src/twitux-lists-dialog.[ch]:
	* src/twitux-main.c: 
	* src/twitux-preferences.[ch]:
	* src/twitux-send-message-dialog.[ch]:
	* src/twitux-tweet-list.[ch]:
	* src/twitux-ui-utils.[ch]:
	Clean up GLib and GTK+ includes. http://live.gnome.org/GnomeGoals/CleanupGTKIncludes

	
2008-12-06  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.in: 
	* data/prefs_dlg.xml:
	* data/twitux.schemas.in: 
	* src/twitux.h:
	* src/twitux-app.c (twitux_app_show_notification): 
	* src/twitux-preferences.c:
	Added option to have a sound notification when a new
	tweet arrives. (#2037880)

2008-12-04  Brian Pepple  <bpepple@fedoraproject.org>

	* data/Makefile.am (glade_DATA):
	* src/twitux-app.c (app_status_icon_create_menu): 
	Drop tray_menu.xml, and manually create the notification
	area popup menu.
	
2008-12-04  Brian Pepple  <bpepple@fedoraproject.org>

	* Makefile.am (SUBDIRS): 
	* data/glade/main_window.glade:
	* data/main_window.xml:
	* po/POTFILES.in:
	* src/twitux-app.c (app_help_contents_cb): 
	* src/twitux-ui-utils.[ch] (twitux_help_show): 
	* configure.in: Enable help.

2008-11-04  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.65.
	
	* configure.in:
	* NEWS:
	* TODO: Add info for release.

2008-11-03  Brian Pepple  <bpepple@fedoraproject.org>

	* data/account_dlg.xml:
	* data/prefs_dlg.xml:
	* src/twitux-account-dialog.c:
	* src/twitux-app.c:
	* src/twitux-network.[ch]:
	* src/twitux-preferences.c: Add suport for Online Accounts
	Service (Marina Zhurakhinskaya, Colin Walters)

2008-09-25  Brian Pepple  <bpepple@fedoraproject.org>

	* src/twitux-parser.c: Fix date parsing on 
	other than C/POSIX locale. (#2122886)
