@@ -1,3 +1,9 @@
+2008-12-13  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* src/twitux-parser.c:
+	* src/twitux-network.[ch] (twitux_network_get_image): 
+	Handle avatars a little more sensibly. (#1963695)
+
 2008-12-07  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* libtwitux/twitux-keyring.h:
